--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ tokio-pipe = "0.2.12"
 regex = "1.10.6"
 futures = "0.3.30"
 hexdump = "0.1.2"
+lazy_static = "1.5.0"
+itertools = "0.13.0"
+serde = { version = "1.0.210", features = ["derive"] }
