--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ hexdump = "0.1.2"
 lazy_static = "1.5.0"
 itertools = "0.13.0"
 serde = { version = "1.0.210", features = ["derive"] }
+thiserror = "1.0.63"
